[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["lovedr6s <praense@icloud.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
